@startuml

title __DATA's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      enum ComandasData {
        INSTANCE
        comandas
        comandes_id
        firebaseComanda
        grups
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace model.domain.data {
      enum ImageData {
        INSTANCE
        firebaseImages
        path_grup
        path_profile
      }
    }
  }
  

  com.pis.buy2gether.model.domain.data.ComandasData o-- com.pis.buy2gether.provider.services.FirebaseComanda : firebaseComanda
  com.pis.buy2gether.model.domain.data.ImageData o-- com.pis.buy2gether.provider.services.FirebaseImages : firebaseImages


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
